adding a blog and appointment page with css as well

--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
                     <div class=icon>
                         <i class="fas fa-wrench fa-3x"></i>
                     </div>
-                    <a href="#"><span>Services</span></a>
+                    <a href="services.html"><span>Services</span></a>
                 </div>
             </li>
             <li class="var_nav">
@@ -49,7 +49,7 @@
                     <div class=icon>
                         <i class="fab fa-blogger-b fa-3x"></i>
                     </div>
-                    <a href="#"><span>Blog</span></a>
+                    <a href="Blog.html"><span>Blog</span></a>
                 </div>
             </li>
             <li class="var_nav">
@@ -58,7 +58,7 @@
                     <div class=icon>
                         <i class="fas fa-briefcase fa-3x"></i>
                     </div>
-                    <a href="#"><span>Appointment</span></a>
+                    <a href="appointment.html"><span>Appointment</span></a>
                 </div>
             </li>
         </UL>
