adding href links to so that you can navigate back to home on each webpage

--- a/home.html
+++ b/home.html
@@ -18,7 +18,12 @@
 <body>
     <div class="hero">
 
-        <h1>Doctor iOS</h1>
+            <a href="home.html"></a><h1>Doctor iOS</h1>
+        <p class="header">#1 Phone Repair Service</p>
+        <p class="header">314.441.5338</p>
+    </div>
+  <div class="img5">
+
     </div>
 
 
@@ -62,9 +67,6 @@
             </li>
         </UL>
     </nav>
-    <div class="header">
-        <p>The #1 Affordable<br>iPhone Repair Service</p>
-    </div>
     <div class="row">
         <div class="leftcolumn">
             <div class="card">
@@ -81,7 +83,7 @@
             <div class="card">
                 <h2>St.Louis Cell Phone Repair</h2>
                 <div class="img3" style="height:540px;"></div>
-                <p id="fancyp">Here at Phone Doc we repair your phone at a great price in a great timely matter!</p>
+                <p id="fancyp">Doctor iOS repairs your phone at a great price in a great timely matter!</p>
                 <p id="fancyp">Expenses for a new cell phone often is over $500, while an iPhone screen replacement or
                  other common cell phone repairs cost less than $100 on average. Get an estimate from an independent
                 cell phone repair company to see how much they would charge, then compare that cost to your insurance deductible.
@@ -92,7 +94,9 @@
         <div class="rightcolumn">
             <div class="card">
                 <h2 id="about">About Us</h2>
-                <div class="firstimg" style="height:363px; width: 210px;"></div>
+                <div class="firstimg">
+
+                </div>
                 <p id="fancyp">We repair your cracked phone screen at a very reasonable price.
                     All cracked phone screens are $25 dollars to repair.You just have to purchase
                     your screen.</p>
@@ -103,10 +107,10 @@
             <div class="card">
                 <div id="fancyp">
                     <h3 id="about">Popular Posts</h3>
-                    <p>Be sure to check out our blog and see what others
+                    <a href="Blog.html"></a>Be sure to check out our blog and see what others
                         are saying about us.</p>
-                    <p> Find your cell phone patient in the services tab !</p>
-                    <p>Have you booked your appointment yet?</p>
+                        <a href="services.html"> </a>Find your cell phone patient here !</p>
+                        <a href="appointment.html"> </a>Have you booked your appointment yet?</p>
                     <p id="fix">YOU BREAK IT<br> WE FIX IT</p>
                 </div>
             </div>
