changing the text decoration in popular post to bold and underline

--- a/home.html
+++ b/home.html
@@ -108,10 +108,12 @@
             <div class="card">
                 <div id="fancyp">
                     <h3 id="about">Popular Posts</h3>
-                    <a href="Blog.html"></a>Be sure to check out our blog and see what others
+                    <div id="underline">
+                    <a href="Blog.html"></a> - Be sure to check out our BLOG and see what others
                         are saying about us.</p>
-                        <a href="services.html"> </a>Find your cell phone patient here !</p>
-                        <a href="appointment.html"> </a>Have you booked your appointment yet?</p>
+                        <a href="services.html"> </a>- Find your cell phone patient here !</p>
+                        <a href="appointment.html"> </a>- Have you booked your appointment yet?
+                        </div>
                     <p id="fix">YOU BREAK IT<br> WE FIX IT</p>
                 </div>
             </div> 
