taking away keyframe in footer

--- a/services.html
+++ b/services.html
@@ -63,6 +63,7 @@
     
     <body>
             <a href="home.html"><h1>Doctor iOS</h1></a>
+            <h2> Cell Phone Patients</h2>
         
         <div id="content">
             <div class="title"></div>
