fixing footer using pull request

--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
         </div>
 
         <footer class="footer-container">
-            <img class="img4" src="image/iphoneforrepair.png">
+            <img class="img4" src="image/iphone.png">
         </footer>
         
     </div>
