--- a/Blog.html
+++ b/Blog.html
@@ -7,7 +7,7 @@
     <title>Blog Page</title>
 </head>
 <body>
-        <a href="/home.html"><h1>Doctor iOS</h1> </a>
+        <a href="home.html"><img class="img5" src="doctoriosservice.png"></a>
         <script type="text/javascript" src="https://form.jotform.com/jsform/83597527700161"></script>
 
 </body>
