--- a/home.html
+++ b/home.html
@@ -17,9 +17,7 @@
 
 <body>
    
-
-        <a href="home.html"></a>
-        <h1>Doctor iOS</h1>
+        <a href="home.html"><img class="img5" src="doctorios2.png"></a>
         <p class="header">#1 Phone Repair Service</p>
         <p class="header"><i class="fas fa-phone"></i>314.441.5338</p>
         
