making everthing mobile responsive

--- a/home.html
+++ b/home.html
@@ -21,9 +21,6 @@
     <p class="header">#1 Phone Repair Service</p>
     <p class="header"><i class="fas fa-phone"></i>314.441.5338</p>
 
-    </div>
-
-
     <nav>
         <UL>
             <li class="var_nav">
@@ -96,6 +93,7 @@
             </div>
 
             <div class="second-b">
+                <div id="about">
                 <h3>Popular Posts</h3>
                 <div id="fancyp">
                     <div id="underline">
@@ -103,8 +101,8 @@
                         are saying about us.</p>
                         <a href="services.html"> </a>- Find your cell phone patient here !</p>
                         <a href="appointment.html"> </a>- Have you booked your appointment yet?
-                    </div>
                     <p id="fix">YOU BREAK IT<br> WE FIX IT</p>
+                </div>
                 </div>
             </div>
             <br>
