making everthing mobile responsive

--- a/home.html
+++ b/home.html
@@ -16,11 +16,11 @@
 </head>
 
 <body>
-
+    <div class="header">
     <a href="home.html"><img class="img5" src="doctorios2.png"></a>
-    <p class="header">#1 Phone Repair Service</p>
-    <p class="header"><i class="fas fa-phone"></i>314.441.5338</p>
-
+    <h1>#1 Phone Repair Service</h1>
+    <h1><i class="fas fa-phone"></i>314.441.5338</h1>
+    </div>
 
     <nav>
         <UL>
@@ -95,7 +95,7 @@
 
             <div class="second-b">
                 <h3 id="about">Popular Posts</h3>
-                <div id="fancyp"> 
+                <div id="fancyp">
                     <div id="underline">
                         <a href="Blog.html"></a> - Be sure to check out our BLOG and see what others
                         are saying about us.</p>
