--- a/Blog.html
+++ b/Blog.html
@@ -7,8 +7,9 @@
     <title>Blog Page</title>
 </head>
 <body>
-        <a href="home.html"><img class="img5" src="doctoriosservice.png"></a>
+    <div>
+        
         <script type="text/javascript" src="https://form.jotform.com/jsform/83597527700161"></script>
-
+            
 </body>
 </html>
