making everthing mobile responsive

--- a/home.html
+++ b/home.html
@@ -73,9 +73,7 @@
                 <p id="fancyp">Expenses for a new cell phone often is over $500, while an iPhone screen replacement or
                     other common cell phone repairs cost less than $100 on average. Get an estimate from an independent
                     cell phone repair company to see how much they would charge, then compare that cost to your
-                    insurance
-                    deductible.
-                    Then compare that to OUR PRICES !
+                    insurancedeductible.Then compare that to OUR PRICES !
                 </p>
             </div>
         </div>
