--- a/appointment.html
+++ b/appointment.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Appointment Page</title>
 </head>
+
 <body>
-        <div class="hero">
-                <a href="home.html"><img class="img5" src="doctoriosservice.png"></a>
-        <script type="text/javascript" src="https://form.jotform.com/jsform/83596360595167"></script>
+
+    <a href="home.html"><img class="img5" height="160px" width="300px" src="doctoriosservice.png"></a>
+    <script type="text/javascript" src="https://form.jotform.com/jsform/83596360595167"></script>
     </div>
 </body>
+
 </html>
