Updates for header

--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css\home.css">
 
     <title>Summer's Capstone Project</title>
@@ -16,12 +16,15 @@
 </head>
 
 <body>
-    <div class="header">
-    <a href="home.html"><img class="img5" src="doctorios2.png"></a>
-    <h1>#1 Phone Repair Service</h1>
-    <h1><i class="fas fa-phone"></i>314.441.5338</h1>
+    <div style="overflow: auto;">
+        <div style="width: 300px; float: left;">
+            <a href="home.html"><img class="img5" src="doctorios2.png"></a>
+        </div>
+        <div style="width: calc(100% - 301px); text-align: right; float: right;">
+            <h1>#1 Phone Repair Service</h1>
+            <h1><i class="fas fa-phone"></i>314.441.5338</h1>
+        </div>
     </div>
-
     <nav>
         <UL>
             <li class="var_nav">
@@ -63,12 +66,15 @@
         </UL>
     </nav>
 
+
+
     <div class="column-layout-container">
         <div class="first">
             <h2>St.Louis Cell Phone Repair</h2>
             <div>
 
-                <img class="img3" src="https://irp-cdn.multiscreensite.com/d708ae7e/dms3rep/multi/mobile/1-Logo_PhoneDoctor.png">
+                <img class="img3"
+                    src="https://irp-cdn.multiscreensite.com/d708ae7e/dms3rep/multi/mobile/1-Logo_PhoneDoctor.png">
                 <p id="fancyp">Doctor iOS repairs your phone at a great price in a great timely matter!</p>
                 <p id="fancyp">Expenses for a new cell phone often is over $500, while an iPhone screen replacement or
                     other common cell phone repairs cost less than $100 on average. Get an estimate from an independent
@@ -84,7 +90,8 @@
             <div class="second-a">
                 <h2 id="about">About Us</h2>
                 <div>
-                    <img class="firstimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrrF23IZwwHEBAWMyu7Dty5QJvZ4_HqBg7XMZRVwa0vKll87dO">
+                    <img class="firstimg"
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrrF23IZwwHEBAWMyu7Dty5QJvZ4_HqBg7XMZRVwa0vKll87dO">
                     <p id="fancyp">We repair your cracked phone screen at a very reasonable price.
                         All cracked phone screens are $25 dollars to repair.You just have to purchase
                         your screen.</p>
@@ -107,7 +114,8 @@
             </div>
             <br>
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199412.4868559348!2d-90.38389084380192!3d38.6530165071809!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d8b4a9faed8ef9%3A0xbe39eaca22bbe05b!2sSt.+Louis%2C+MO!5e0!3m2!1sen!2sus!4v1547169660021"
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199412.4868559348!2d-90.38389084380192!3d38.6530165071809!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d8b4a9faed8ef9%3A0xbe39eaca22bbe05b!2sSt.+Louis%2C+MO!5e0!3m2!1sen!2sus!4v1547169660021"
                 frameborder="0" style="border:0; width: 100%; height: 500px;" allowfullscreen=""></iframe>
         </div>
 
