making everthing mobile responsive

--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
     </head>
 
     <body>
-            <a href="home.html"><img class="img5" height="160px" width="300px" src="doctoriosservice.png"></a>
+        <a href="home.html"><img class="img5" src="doctoriosservice.png"></a>
         <h3> Cell Phone Patients</h3>
         <div id="content">
             <div class="title">
