--- a/home.html
+++ b/home.html
@@ -17,10 +17,10 @@
 
 <body>
     <div style="overflow: auto;">
-        <div style="width: 300px; float: left;">
+        <div class="logo">
             <a href="home.html"><img class="img5" src="doctorios2.png"></a>
         </div>
-        <div style="width: calc(100% - 301px); text-align: right; float: right;">
+        <div class="contact-info">
             <h1>#1 Phone Repair Service</h1>
             <h1><i class="fas fa-phone"></i>314.441.5338</h1>
         </div>
