--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"crossorigin="anonymous">
     <link rel="stylesheet" href="css\home.css">
 
     <title>Summer's Capstone Project</title>
@@ -17,13 +17,13 @@
 
 <body>
     <div style="overflow: auto;">
-            <div style="width: 300px; float: left;">
-                <a href="home.html"><img class="img5" src="doctorios2.png"></a>
-            </div>
-            <div style="width: calc(100% - 301px); text-align: right; float: right;">
-                <h1>#1 Phone Repair Service</h1>
-                <h1><i class="fas fa-phone"></i>314.441.5338</h1>
-            </div>
+        <div style="width: 300px; float: left;">
+            <a href="home.html"><img class="img5" src="doctorios2.png"></a>
+        </div>
+        <div style="width: calc(100% - 301px); text-align: right; float: right;">
+            <h1>#1 Phone Repair Service</h1>
+            <h1><i class="fas fa-phone"></i>314.441.5338</h1>
+        </div>
     </div>
 
     <nav>
