--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
-    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css\home.css">
 
     <title>Summer's Capstone Project</title>
@@ -25,7 +25,6 @@
             <h1><i class="fas fa-phone"></i>314.441.5338</h1>
         </div>
     </div>
-
     <nav>
         <UL>
             <li class="var_nav">
@@ -67,6 +66,8 @@
         </UL>
     </nav>
 
+
+
     <div class="column-layout-container">
         <div class="first">
             <h2>St.Louis Cell Phone Repair</h2>
@@ -77,7 +78,9 @@
                 <p id="fancyp">Expenses for a new cell phone often is over $500, while an iPhone screen replacement or
                     other common cell phone repairs cost less than $100 on average. Get an estimate from an independent
                     cell phone repair company to see how much they would charge, then compare that cost to your
-                    insurance deductible.Then compare that to OUR PRICES !
+                    insurance
+                    deductible.
+                    Then compare that to OUR PRICES !
                 </p>
             </div>
         </div>
