--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
             <a href="home.html"><img class="img5" src="doctorios2.png"></a>
         </div>
         <div class="contact-info">
-            <h1>#1 Phone Repair Service</h1>
+            <h1>#1 Affordable Phone Repair Service</h1>
             <h1><i class="fas fa-phone"></i>314.441.5338</h1>
         </div>
     </div>
@@ -76,11 +76,8 @@
                 <img class="img3" src="https://irp-cdn.multiscreensite.com/d708ae7e/dms3rep/multi/mobile/1-Logo_PhoneDoctor.png">
                 <p id="fancyp">Doctor iOS repairs your phone at a great price in a great timely matter!</p>
                 <p id="fancyp">Expenses for a new cell phone often is over $500, while an iPhone screen replacement or
-                    other common cell phone repairs cost less than $100 on average. Get an estimate from an independent
-                    cell phone repair company to see how much they would charge, then compare that cost to your
-                    insurance
-                    deductible.
-                    Then compare that to OUR PRICES !
+                    other common cell phone repairs cost more than $100 on average. Here at Doctor iOS we repair your phone
+                    screens at a very affordable price to help you save. Don't break your phone screen then break the bank!
                 </p>
             </div>
         </div>
@@ -102,15 +99,17 @@
                 <h3 id="about">Popular Posts</h3>
                 <div id="fancyp">
                     <div id="underline">
-                        <a href="Blog.html"></a> - Be sure to check out our BLOG and see what others
-                        are saying about us.</p>
-                        <a href="services.html"> </a>- Find your cell phone patient here !</p>
-                        <a href="appointment.html"> </a>- Have you booked your appointment yet?
+                        <a href="Blog.html"></a>
+                        <p>Be sure to check out our BLOG and see what others
+                            are saying about us.</p>
+                        <a href="services.html"> </a>
+                        <p> -Find your cell phone patient here !</p>
+                        <a href="appointment.html"> </a>
+                        <p>- Have you booked your appointment yet? </p>
                     </div>
                     <p id="fix">YOU BREAK IT<br> WE FIX IT</p>
                 </div>
             </div>
-            <br>
 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199412.4868559348!2d-90.38389084380192!3d38.6530165071809!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d8b4a9faed8ef9%3A0xbe39eaca22bbe05b!2sSt.+Louis%2C+MO!5e0!3m2!1sen!2sus!4v1547169660021"
                 frameborder="0" style="border:0; width: 100%; height: 500px;" allowfullscreen=""></iframe>
