--- a/services.html
+++ b/services.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Summer's Services page</title>
     <link rel="stylesheet" href="css/services.css">
 </head>
 
 <body>
+    
+    
     <style>
         * {
             margin: 0;
@@ -71,7 +73,7 @@
                         <div class="heading">iPhone 8 +</div>
                         <div class="description">
                             <h2>iPhone 8 +</h2>
-                            <p>Screen Price - US $34.99
+                            <p>Screen Price - US $47.00
                             </p>
                         </div>
 
@@ -79,47 +81,47 @@
                         <div class="heading">iPhone 8</div>
                         <div class="description">
                             <h2>iPhone 8</h2>
-                            <p>Screen Price - US $24.99</p>
+                            <p>Screen Price - US $45.00</p>
                         </div>
 
                     <li class="bg3">
                         <div class="heading">iPhone 7 +</div>
                         <div class="description">
                             <h2>iPhone 7 +</h2>
-                            <p> Screen Price - US $29.99</p>
+                            <p> Screen Price - US $34.00</p>
                         </div>
 
                     <li class="bg4">
                         <div class="heading">iPhone 7</div>
                         <div class="description">
                             <h2>iPhone 7</h2>
-                            <p>Screen Price - US $19.99</p>
+                            <p>Screen Price - US $32.00</p>
                         </div>
                     </li>
                     <li class="bg5">
                         <div class="heading">iPhone 6s +</div>
                         <div class="description">
                             <h2>iPhone 6s +</h2>
-                            <p> Screen Price - US $24.99 </p>
+                            <p> Screen Price - US $30.00 </p>
                         </div>
                     <li class="bg6">
                         <div class="heading">iPhone 6s</div>
                         <div class="description">
                             <h2>iPhone 6s</h2>
-                            <p>Screen Price - US $$21.99</p>
+                            <p>Screen Price - US $$26.00</p>
                         </div>
                     <li class="bg7">
                         <div class="heading">iPhone 6+</div>
                         <div class="description">
                             <h2>iPhone 6 +</h2>
-                            <p>Screen Price - US $19.99</p>
+                            <p>Screen Price - US $22.00</p>
                         </div>
 
                     <li class="bg8">
                         <div class="heading">iPhone 6</div>
                         <div class="description">
                             <h2>iPhone 6</h2>
-                            <p>Screen Price - US $14.99</p>
+                            <p>Screen Price - US $18.00</p>
                         </div>
 
                     </li>
@@ -127,7 +129,7 @@
                         <div class="heading">iPhone SE</div>
                         <div class="description">
                             <h2>iPhone SE</h2>
-                            <p>Screen Price - US $11.99</p>
+                            <p>Screen Price - US $15.00</p>
                             <p>
                         </div>
 
