--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@
     </div>
 
     <div class="footer-container">
-        <img class="img4" src="image/iphone.png">
+        <img class="img4" src="image/iphoneforbiz.jpg">
 
         </footer>
 
