--- a/home.html
+++ b/home.html
@@ -84,10 +84,10 @@
             <div class="second-a">
                 <h2 id="about">About Us</h2>
                 <div>
-                    <img class="firstimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrrF23IZwwHEBAWMyu7Dty5QJvZ4_HqBg7XMZRVwa0vKll87dO">
+                    <img class="firstimg"> <iframe src="https://giphy.com/embed/fdShfdif23x04Bcsmk" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/motionartsmedia-animation-design-fdShfdif23x04Bcsmk">via GIPHY</a></p>
                     <p id="fancyp">Doctor iOS repairs your phone at a great price in a great timely matter!</p>
                     <p id="fancyp">We repair your cracked phone screen at a very reasonable price.
-                        All cracked phone screens are $25 dollars to repair.You just have to purchase
+                        All cracked phone screens are $60 dollars to repair.You just have to purchase
                         your screen.</p>
                     <div style="second-grow: 8">
                     </div>
