--- a/Blog.html
+++ b/Blog.html
@@ -13,6 +13,8 @@
     <div>
         <a href="home.html"><img class="img5" height="160px" width="300px" src="doctoriosservice.png"></a>
         </div>
+
+        <h1> NEWS & EVENTS</h1>
         <div>
     
         <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fdeiony.king%2Fposts%2F2557405790998646&width=500" width="500" height="218" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
@@ -21,6 +23,7 @@
         <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmspepsi.hair%2Fposts%2F10218877117668454&width=500" width="500" height="735" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
         <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftamara.schooler.10%2Fposts%2F1002995243242320&width=500" width="500" height="714" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
         <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fyungsta.savage%2Fposts%2F10218448225453191&width=500" width="500" height="714" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpaige.hinds.5%2Fposts%2F2048514381920606&width=500" width="500" height="716" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>s
 
         </div>
       
