changing prices on services page

--- a/services.html
+++ b/services.html
@@ -128,7 +128,8 @@
                         <div class="heading">iPhone 6</div>
                         <div class="description">
                             <h2>iPhone 6</h2>
-                            <p id="exclude">Repair Price - US $45.00</p>
+                            <p>Repair Price - US $53.00</p>
+                            <h4> Repair Price - US $45.00</h4>
                           
                         </div>
 
@@ -137,7 +138,8 @@
                         <div class="heading">iPhone SE</div>
                         <div class="description">
                             <h2>iPhone SE</h2>
-                            <p id="exclude">Repair Price - US $48.00</p>
+                            <p>Repair Price - US $48.00</p>
+                            <h4> Repair Price - US $50.00</h4>
                          
                             <p>
                         </div>
