--- a/home.html
+++ b/home.html
@@ -85,16 +85,16 @@
 
         <div class="second">
             <div class="second-a">
-                <h2 id="about">About Us</h2>
+                <!-- <h2 id="about">About Us</h2> -->
+                <h1 class="deal">Deal of the Month</h1>
                 <div>
-
-                    <p id="fancyp">Doctor iOS repairs your phone at a great price and we even deliver phone repair
+                        <img src="./image/Halloween-flyer.jpg">
+                    <!-- <p id="fancyp">Doctor iOS repairs your phone at a great price and we even deliver phone repair
                         service to you!</p>
                     <p id="fancyp">We repair your cracked phone screen at a very reasonable price.
                         All cracked phone screens are under $60.00 dollars to repair.Don't break your phone then break
-                        the bank</p>
+                        the bank</p> -->
                     
-                        <h1 class="deal">Deal of the Month</h1>
 
                     </div>
                 </div>
