changing prices on services page

--- a/home.html
+++ b/home.html
@@ -88,7 +88,7 @@
                 <!-- <h2 id="about">About Us</h2> -->
                 <h1 class="deal">Deal of the Month</h1>
                 <div>
-                        <img src="./image/Halloween-flyer.jpg">
+                        <img src="./image/Halloween-flyer.jpg" id="halloween">
                     <!-- <p id="fancyp">Doctor iOS repairs your phone at a great price and we even deliver phone repair
                         service to you!</p>
                     <p id="fancyp">We repair your cracked phone screen at a very reasonable price.
