--- a/home.html
+++ b/home.html
@@ -85,6 +85,27 @@
             </div>
 
 
+            <div class="first">
+                <h2>St.Louis Cell Phone Repair</h2>
+                <div>
+
+                    <img class="img3"
+                        src="https://irp-cdn.multiscreensite.com/d708ae7e/dms3rep/multi/mobile/1-Logo_PhoneDoctor.png">
+                    <p id="fancyp">Expenses for a new cell phone often is over $500, while an iPhone screen replacement
+                        or
+                        other common cell phone repairs cost more than $100 on average. Here at Doctor iOS we repair
+                        your
+                        phone
+                        screens at a very affordable price to help you save. Don't break your phone screen then break
+                        the
+                        bank!
+                    </p>
+                </div>
+            </div>
+
+
+
+
             <div class="second-b">
                 <h3 id="about">Popular Posts</h3>
                 <div id="fancyp">
@@ -105,20 +126,7 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199412.4868559348!2d-90.38389084380192!3d38.6530165071809!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d8b4a9faed8ef9%3A0xbe39eaca22bbe05b!2sSt.+Louis%2C+MO!5e0!3m2!1sen!2sus!4v1547169660021"
                 frameborder="0" style="border:0; width: 100%; height: 500px;" allowfullscreen=""></iframe>
         </div>
-        <div class="first">
-            <h2>St.Louis Cell Phone Repair</h2>
-            <div>
 
-                <img class="img3"
-                    src="https://irp-cdn.multiscreensite.com/d708ae7e/dms3rep/multi/mobile/1-Logo_PhoneDoctor.png">
-                <p id="fancyp">Expenses for a new cell phone often is over $500, while an iPhone screen replacement or
-                    other common cell phone repairs cost more than $100 on average. Here at Doctor iOS we repair your
-                    phone
-                    screens at a very affordable price to help you save. Don't break your phone screen then break the
-                    bank!
-                </p>
-            </div>
-        </div>
 
 
 
