changing prices on services page

--- a/Blog.html
+++ b/Blog.html
@@ -15,7 +15,7 @@
     </div>
 
     <h1> NEWS & EVENTS</h1>
-    <div>
+    <div class="blog">
         <iframe
             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FdoctoriOS.repair%2Fposts%2F285876705630355&width=500"
             width="500" height="652" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
