--- a/Blog.html
+++ b/Blog.html
@@ -18,39 +18,39 @@
     <div class="blog">
         <iframe
             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FdoctoriOS.repair%2Fposts%2F285876705630355&width=500"
-            width="500" height="652" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-            allowTransparency="true" allow="encrypted-media"></iframe>
+            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+            allow="encrypted-media"></iframe>
         <iframe
             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FdoctoriOS.repair%2Fposts%2F284728655745160&width=500"
-            width="500" height="613" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-            allowTransparency="true" allow="encrypted-media"></iframe>
+            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+            allow="encrypted-media"></iframe>
         <iframe
             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fdeiony.king%2Fposts%2F2557405790998646&width=500"
-            width="500" height="218" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-            allowTransparency="true" allow="encrypted-media"></iframe>
+            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+            allow="encrypted-media"></iframe>
         <iframe
             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftaneisha.moran%2Fposts%2F10219059239770713&width=500"
-            width="500" height="752" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-            allowTransparency="true" allow="encrypted-media"></iframe>
+            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+            allow="encrypted-media"></iframe>
         <iframe
             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fcorie.coleman.7%2Fposts%2F2331706910225480&width=500"
-            width="500" height="576" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-            allowTransparency="true" allow="encrypted-media"></iframe>
+            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+            allow="encrypted-media"></iframe>
         <iframe
             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmspepsi.hair%2Fposts%2F10218877117668454&width=500"
-            width="500" height="735" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-            allowTransparency="true" allow="encrypted-media"></iframe>
+            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+            allow="encrypted-media"></iframe>
         <iframe
             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftamara.schooler.10%2Fposts%2F1002995243242320&width=500"
-            width="500" height="714" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-            allowTransparency="true" allow="encrypted-media"></iframe>
+            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+            allow="encrypted-media"></iframe>
         <iframe
             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fyungsta.savage%2Fposts%2F10218448225453191&width=500"
-            width="500" height="714" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-            allowTransparency="true" allow="encrypted-media"></iframe>
+            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+            allow="encrypted-media"></iframe>
         <iframe
             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpaige.hinds.5%2Fposts%2F2048514381920606&width=500"
-            width="500" height="716" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-            allowTransparency="true" allow="encrypted-media"></iframe>
+            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
+            allow="encrypted-media"></iframe>
 
     </div>
