--- a/Blog.html
+++ b/Blog.html
@@ -17,40 +17,27 @@
     <h1> NEWS & EVENTS</h1>
     <div class="blog">
         <iframe
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FdoctoriOS.repair%2Fposts%2F285876705630355&width=500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-            allow="encrypted-media"></iframe>
+            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D775879029512636%26id%3D100012716381038&width=500"
+            width="100%" height="auto" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+            allowTransparency="true" allow="encrypted-media">
+        </iframe>
         <iframe
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FdoctoriOS.repair%2Fposts%2F284728655745160&width=500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-            allow="encrypted-media"></iframe>
+            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fyae.jones.9%2Fposts%2F2143381925767441&width=500"
+            width="100%" height="auto" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+            allowTransparency="true" allow="encrypted-media">
+        </iframe>
         <iframe
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fdeiony.king%2Fposts%2F2557405790998646&width=500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-            allow="encrypted-media"></iframe>
+            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fyae.jones.9%2Fposts%2F2143381925767441&width=500"
+            width="100%" height="auto" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+            allowTransparency="true" allow="encrypted-media">
+        </iframe>
         <iframe
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftaneisha.moran%2Fposts%2F10219059239770713&width=500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-            allow="encrypted-media"></iframe>
-        <iframe
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fcorie.coleman.7%2Fposts%2F2331706910225480&width=500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-            allow="encrypted-media"></iframe>
-        <iframe
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmspepsi.hair%2Fposts%2F10218877117668454&width=500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-            allow="encrypted-media"></iframe>
-        <iframe
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftamara.schooler.10%2Fposts%2F1002995243242320&width=500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-            allow="encrypted-media"></iframe>
-        <iframe
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fyungsta.savage%2Fposts%2F10218448225453191&width=500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-            allow="encrypted-media"></iframe>
-        <iframe
-            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpaige.hinds.5%2Fposts%2F2048514381920606&width=500"
-            style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
-            allow="encrypted-media"></iframe>
+            src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FBDubb2x%2Fposts%2F2264839380494406&width=500"
+            width="100%" height="auto" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+            allowTransparency="true" allow="encrypted-media">
+        </iframe>
+
+        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FBigNisha%2Fposts%2F2505836309464590&width=500" 
+        width="100%" height="auto" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 
     </div>
