changing prices on services page

--- a/Blog.html
+++ b/Blog.html
@@ -15,7 +15,7 @@
     </div>
 
     <h1> NEWS & EVENTS</h1>
-    <div class="blog">
+    <div>
         <iframe
             src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D775879029512636%26id%3D100012716381038&width=500"
             style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"
