--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
                 <!-- <h2 id="about">About Us</h2> -->
                 <h1 class="deal">Deal of the Month</h1>
                 <div>
-                    <img src="./image/Halloween-flyer.jpg" id="halloween">
+                    <img src="./image/september-flyer.jpg" id="halloween">
 
 
 
