--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 <body>
     <div style="overflow: auto;">
         <div class="logo">
-            <a href="home.html"><img class="img5" src="doctorios2.png"></a>
+            <a href="home.html"><img class="img5" src="./image/busniess-logo.png"></a>
         </div>
         <div class="contact-info">
             <h1>#1 Affordable Phone Repair Service</h1>
@@ -70,13 +70,9 @@
     <div class="column-layout-container">
         <div class="second">
             <div class="second-a">
-                <!-- <h2 id="about">About Us</h2> -->
                 <h1 class="deal">Deal of the Month</h1>
                 <div>
                     <img src="./image/september-flyer.jpg" id="halloween">
-
-
-
                 </div>
             </div>
 
