--- a/Blog.html
+++ b/Blog.html
@@ -11,7 +11,7 @@
 
 <body>
     <div>
-        <a href="home.html"><img class="img5" height="160px" width="300px" src="doctoriosservice.png"></a>
+        <a href="home.html"><img class="img5" height="160px" width="300px" src="./image/busniess-logo.png"></a>
     </div>
 
     <h1> NEWS & EVENTS</h1>
