--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
     </head>
 
     <body>
-        <a href="home.html"><img class="img5" src="doctoriosservice.png"></a>
+        <a href="home.html"><img class="img5" src="/image/busniess-logo.png"></a>
         <h3> Cell Phone Patients</h3>
         <div id="content">
             <div class="title">
