changing service prices

--- a/services.html
+++ b/services.html
@@ -64,7 +64,9 @@
     </head>
 
     <body>
-        <a href="home.html"><img class="img5" src="/image/busniess-logo.png"></a>
+        <div>
+            <a href="home.html"><img class="img5" src="/image/busniess-logo.png"></a>
+            </div>
         <h3> Cell Phone Patients</h3>
         <div id="content">
             <div class="title">
