--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
             <div class="second-a">
                 <h1 class="deal">Deal of the Month</h1>
                 <div>
-                    <img src="./image/september-flyer.jpg" id="halloween">
+                    <img src="./image/black-friday.jpg" id="halloween">
                 </div>
             </div>
 
