--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
             <a href="home.html"><img class="img5" src="/image/busniess-logo.png"></a>
             </div>
         <h3> Cell Phone Patients</h3>
-        <h1>All screens are $10 off now untin the end of November</h1>
+        <h1>All screens are $10 off now until the end of November</h1>
         <div id="content">
             <div class="title">
                 <ul class="accordion" id="accordion">
