adding christmas-flyer

--- a/services.html
+++ b/services.html
@@ -69,86 +69,163 @@
         </div>
         <h3> Cell Phone Patients</h3>
         <h1>All screens are $10 off now until the end of November</h1>
-        <ul class="accordion">
-            <li class="bg1">
-                <div class="heading">iPhone 8 +</div>
-                <div class="description">
-                    <h2>iPhone 8 +</h2>
-                    <p>Repair Price - US $75.00
-                    </p>
-                    <h4> Repair Price - US $65.00</h4>
-                </div>
+        <div id="content">
+            <ul class="accordion">
+                <div class="title">
+                    <li class="bg1">
+                        <ul class="accordion" id="accordion">
+                            <div class="heading">iPhone 8 +</div>
+                            <li class="bg1">
+                                <div class="description">
+                                    <div class="heading">iPhone 8 +</div>
+                                    <h2>iPhone 8 +</h2>
+                                    <div class="description">
+                                        <p>Repair Price - US $75.00
+                                            <h2>iPhone 8 +</h2>
+                                        </p>
+                                        <p>Repair Price - US $75.00 <h4> Repair Price - US $65.00</h4>
+                                        </p>
+                                    </div>
+                                    <h4> Repair Price - US $65.00</h4>
+                                </div>
+                            <li class="bg2">
 
-            <li class="bg2">
-                <div class="heading">iPhone 8</div>
-                <div class="description">
-                    <h2>iPhone 8</h2>
-                    <p>Repair Price - US $70.00</p>
-                    <h4> Repair Price - US $60.00</h4>
-                </div>
+                                <div class="heading">iPhone 8</div>
+                            <li class="bg2">
+                                <div class="description">
+                                    <div class="heading">iPhone 8</div>
+                                    <h2>iPhone 8</h2>
+                                    <div class="description">
+                                        <p>Repair Price - US $70.00</p>
+                                        <h2>iPhone 8</h2>
+                                        <h4> Repair Price - US $60.00</h4>
+                                        <p>Repair Price - US $70.00</p>
+                                    </div>
+                                    <h4> Repair Price - US $60.00</h4>
+                                </div>
+                            <li class="bg3">
 
-            <li class="bg3">
-                <div class="heading">iPhone 7 +</div>
-                <div class="description">
-                    <h2>iPhone 7 +</h2>
-                    <p> Repair Price - US $75.00</p>
-                    <h4> Repair Price - US $65.00</h4>
-                </div>
+                                <div class="heading">iPhone 7 +</div>
+                            <li class="bg3">
+                                <div class="description">
+                                    <div class="heading">iPhone 7 +</div>
+                                    <h2>iPhone 7 +</h2>
+                                    <div class="description">
+                                        <p> Repair Price - US $75.00</p>
+                                        <h2>iPhone 7 +</h2>
+                                        <h4> Repair Price - US $65.00</h4>
+                                        <p> Repair Price - US $75.00</p>
+                                    </div>
+                                    <h4> Repair Price - US $65.00</h4>
+                                </div>
+                            <li class="bg4">
 
-            <li class="bg4">
-                <div class="heading">iPhone 7</div>
-                <div class="description">
-                    <h2>iPhone 7</h2>
-                    <p>Repair Price - US $70.00</p>
-                    <h4> Repair Price - US $60.00</h4>
+                                <div class="heading">iPhone 7</div>
+                            <li class="bg4">
+                                <div class="description">
+                                    <div class="heading">iPhone 7</div>
+                                    <h2>iPhone 7</h2>
+                                    <div class="description">
+                                        <p>Repair Price - US $70.00</p>
+                                        <h2>iPhone 7</h2>
+                                        <h4> Repair Price - US $60.00</h4>
+                                        <p>Repair Price - US $70.00</p>
+                                    </div>
+                                    <h4> Repair Price - US $60.00</h4>
+                            </li>
                 </div>
-            </li>
-            <li class="bg5">
+                <li class="bg5">
+                </li>
                 <div class="heading">iPhone 6s +</div>
-                <div class="description">
-                    <h2>iPhone 6s +</h2>
-                    <p> Repair Price - US $70.00 </p>
-                    <h4> Repair Price - US $60.00</h4>
-                </div>
-            <li class="bg6">
+                <li class="bg5">
+                    <div class="description">
+                        <div class="heading">iPhone 6s +</div>
+                        <h2>iPhone 6s +</h2>
+                        <div class="description">
+                            <p> Repair Price - US $70.00 </p>
+                            <h2>iPhone 6s +</h2>
+                            <h4> Repair Price - US $60.00</h4>
+                            <p> Repair Price - US $70.00 </p>
+                        </div>
+                        <h4> Repair Price - US $60.00</h4>
+                <li class="bg6">
+        </div>
+        <div class="heading">iPhone 6s</div>
+        <li class="bg6">
+            <div class="description">
                 <div class="heading">iPhone 6s</div>
+                <h2>iPhone 6s</h2>
                 <div class="description">
-                    <h2>iPhone 6s</h2>
                     <p>Repair Price - US $$65.00</p>
+                    <h2>iPhone 6s</h2>
                     <h4> Repair Price - US $55.00</h4>
+                    <p>Repair Price - US $$65.00</p>
                 </div>
-            <li class="bg7">
+                <h4> Repair Price - US $55.00</h4>
+        <li class="bg7">
+            </div>
+            <div class="heading">iPhone 6+</div>
+        <li class="bg7">
+            <div class="description">
                 <div class="heading">iPhone 6+</div>
+                <h2>iPhone 6 +</h2>
                 <div class="description">
-                    <h2>iPhone 6 +</h2>
                     <p>Repair Price - US $65.00</p>
+                    <h2>iPhone 6 +</h2>
                     <h4> Repair Price - US $55.00</h4>
+                    <p>Repair Price - US $65.00</p>
                 </div>
+                <h4> Repair Price - US $55.00</h4>
+            </div>
+        <li class="bg8">
 
-            <li class="bg8">
+            <div class="heading">iPhone 6</div>
+        <li class="bg8">
+            <div class="description">
                 <div class="heading">iPhone 6</div>
+                <h2>iPhone 6</h2>
                 <div class="description">
+                    <p>Repair Price - US $55.00</p>
                     <h2>iPhone 6</h2>
+                    <h4> Repair Price - US $45.00</h4>
                     <p>Repair Price - US $55.00</p>
                     <h4> Repair Price - US $45.00</h4>
-
                 </div>
 
-            </li>
-            <li class="bg9 bleft">
+
+            </div>
+        </li>
+
+        <li class="bg9 bleft">
+        </li>
+        <div class="heading">iPhone SE</div>
+        <li class="bg9 bleft">
+            <div class="description">
                 <div class="heading">iPhone SE</div>
+                <h2>iPhone SE</h2>
                 <div class="description">
+                    <p>Repair Price - US $50.00</p>
                     <h2>iPhone SE</h2>
+                    <h4> Repair Price - US $40.00</h4>
                     <p>Repair Price - US $50.00</p>
                     <h4> Repair Price - US $40.00</h4>
-
                     <p>
-                </div>
 
-            </li>
+                </div>
+                <p>
+            </div>
+        </li>
+
         </ul>
+        </li>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        </ul>
+        <script src="services.js"></script>
+        </div>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="services.js"></script>
     </body>
+</body>
+
 
 </html>
